new quote system
