# erc_dex/erc_dex/api/trade_api.py
@@ -545,7 +545,7 @@ class TradeApi(object):
 
         :param async bool
         :param IRequestFillRequest request: (required)
-        :return: IFillQuote
+        :return: MarketQuote
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -567,7 +567,7 @@ class TradeApi(object):
 
         :param async bool
         :param IRequestFillRequest request: (required)
-        :return: IFillQuote
+        :return: MarketQuote
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -625,7 +625,7 @@ class TradeApi(object):
             body=body_params,
             post_params=form_params,
             files=local_var_files,
-            response_type='IFillQuote',  # noqa: E501
+            response_type='MarketQuote',  # noqa: E501
             auth_settings=auth_settings,
             async=params.get('async'),
             _return_http_data_only=params.get('_return_http_data_only'),
