# erc_dex/erc_dex/models/fill_receipt_log.py
@@ -16,6 +16,8 @@ import re  # noqa: F401
 
 import six
 
+from erc_dex.models.fill_receipt import FillReceipt  # noqa: F401,E501
+
 
 class FillReceiptLog(object):
     """NOTE: This class is auto generated by the swagger code generator program.
@@ -38,7 +40,8 @@ class FillReceiptLog(object):
         'receipt_id': 'float',
         'taker_amount': 'str',
         'maker_address': 'str',
-        'is_fee_order': 'bool'
+        'is_fee_order': 'bool',
+        'receipt': 'FillReceipt'
     }
 
     attribute_map = {
@@ -49,10 +52,11 @@ class FillReceiptLog(object):
         'receipt_id': 'receiptId',
         'taker_amount': 'takerAmount',
         'maker_address': 'makerAddress',
-        'is_fee_order': 'isFeeOrder'
+        'is_fee_order': 'isFeeOrder',
+        'receipt': 'receipt'
     }
 
-    def __init__(self, id=None, date_created=None, date_updated=None, order_id=None, receipt_id=None, taker_amount=None, maker_address=None, is_fee_order=None):  # noqa: E501
+    def __init__(self, id=None, date_created=None, date_updated=None, order_id=None, receipt_id=None, taker_amount=None, maker_address=None, is_fee_order=None, receipt=None):  # noqa: E501
         """FillReceiptLog - a model defined in Swagger"""  # noqa: E501
 
         self._id = None
@@ -63,6 +67,7 @@ class FillReceiptLog(object):
         self._taker_amount = None
         self._maker_address = None
         self._is_fee_order = None
+        self._receipt = None
         self.discriminator = None
 
         self.id = id
@@ -73,6 +78,8 @@ class FillReceiptLog(object):
         self.taker_amount = taker_amount
         self.maker_address = maker_address
         self.is_fee_order = is_fee_order
+        if receipt is not None:
+            self.receipt = receipt
 
     @property
     def id(self):
@@ -263,6 +270,27 @@ class FillReceiptLog(object):
             raise ValueError("Invalid value for `is_fee_order`, must not be `None`")  # noqa: E501
 
         self._is_fee_order = is_fee_order
+
+    @property
+    def receipt(self):
+        """Gets the receipt of this FillReceiptLog.  # noqa: E501
+
+
+        :return: The receipt of this FillReceiptLog.  # noqa: E501
+        :rtype: FillReceipt
+        """
+        return self._receipt
+
+    @receipt.setter
+    def receipt(self, receipt):
+        """Sets the receipt of this FillReceiptLog.
+
+
+        :param receipt: The receipt of this FillReceiptLog.  # noqa: E501
+        :type: FillReceipt
+        """
+
+        self._receipt = receipt
 
     def to_dict(self):
         """Returns the model properties as a dict"""
