# erc_dex/erc_dex/models/market_quote_fill.py
@@ -1,0 +1,289 @@
+# coding: utf-8
+
+"""
+    ERC dEX REST API
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
+
+    OpenAPI spec version: 0.0.1-alpha
+    
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+
+class MarketQuoteFill(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'id': 'float',
+        'date_created': 'datetime',
+        'date_updated': 'datetime',
+        'order_id': 'float',
+        'quote_id': 'float',
+        'order_hash': 'str',
+        'taker_amount': 'str'
+    }
+
+    attribute_map = {
+        'id': 'id',
+        'date_created': 'dateCreated',
+        'date_updated': 'dateUpdated',
+        'order_id': 'orderId',
+        'quote_id': 'quoteId',
+        'order_hash': 'orderHash',
+        'taker_amount': 'takerAmount'
+    }
+
+    def __init__(self, id=None, date_created=None, date_updated=None, order_id=None, quote_id=None, order_hash=None, taker_amount=None):  # noqa: E501
+        """MarketQuoteFill - a model defined in Swagger"""  # noqa: E501
+
+        self._id = None
+        self._date_created = None
+        self._date_updated = None
+        self._order_id = None
+        self._quote_id = None
+        self._order_hash = None
+        self._taker_amount = None
+        self.discriminator = None
+
+        self.id = id
+        self.date_created = date_created
+        self.date_updated = date_updated
+        self.order_id = order_id
+        self.quote_id = quote_id
+        self.order_hash = order_hash
+        self.taker_amount = taker_amount
+
+    @property
+    def id(self):
+        """Gets the id of this MarketQuoteFill.  # noqa: E501
+
+        Unique Identifier  # noqa: E501
+
+        :return: The id of this MarketQuoteFill.  # noqa: E501
+        :rtype: float
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this MarketQuoteFill.
+
+        Unique Identifier  # noqa: E501
+
+        :param id: The id of this MarketQuoteFill.  # noqa: E501
+        :type: float
+        """
+        if id is None:
+            raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
+
+        self._id = id
+
+    @property
+    def date_created(self):
+        """Gets the date_created of this MarketQuoteFill.  # noqa: E501
+
+        Date of creation  # noqa: E501
+
+        :return: The date_created of this MarketQuoteFill.  # noqa: E501
+        :rtype: datetime
+        """
+        return self._date_created
+
+    @date_created.setter
+    def date_created(self, date_created):
+        """Sets the date_created of this MarketQuoteFill.
+
+        Date of creation  # noqa: E501
+
+        :param date_created: The date_created of this MarketQuoteFill.  # noqa: E501
+        :type: datetime
+        """
+        if date_created is None:
+            raise ValueError("Invalid value for `date_created`, must not be `None`")  # noqa: E501
+
+        self._date_created = date_created
+
+    @property
+    def date_updated(self):
+        """Gets the date_updated of this MarketQuoteFill.  # noqa: E501
+
+        Date of updated  # noqa: E501
+
+        :return: The date_updated of this MarketQuoteFill.  # noqa: E501
+        :rtype: datetime
+        """
+        return self._date_updated
+
+    @date_updated.setter
+    def date_updated(self, date_updated):
+        """Sets the date_updated of this MarketQuoteFill.
+
+        Date of updated  # noqa: E501
+
+        :param date_updated: The date_updated of this MarketQuoteFill.  # noqa: E501
+        :type: datetime
+        """
+        if date_updated is None:
+            raise ValueError("Invalid value for `date_updated`, must not be `None`")  # noqa: E501
+
+        self._date_updated = date_updated
+
+    @property
+    def order_id(self):
+        """Gets the order_id of this MarketQuoteFill.  # noqa: E501
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :return: The order_id of this MarketQuoteFill.  # noqa: E501
+        :rtype: float
+        """
+        return self._order_id
+
+    @order_id.setter
+    def order_id(self, order_id):
+        """Sets the order_id of this MarketQuoteFill.
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :param order_id: The order_id of this MarketQuoteFill.  # noqa: E501
+        :type: float
+        """
+        if order_id is None:
+            raise ValueError("Invalid value for `order_id`, must not be `None`")  # noqa: E501
+
+        self._order_id = order_id
+
+    @property
+    def quote_id(self):
+        """Gets the quote_id of this MarketQuoteFill.  # noqa: E501
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :return: The quote_id of this MarketQuoteFill.  # noqa: E501
+        :rtype: float
+        """
+        return self._quote_id
+
+    @quote_id.setter
+    def quote_id(self, quote_id):
+        """Sets the quote_id of this MarketQuoteFill.
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :param quote_id: The quote_id of this MarketQuoteFill.  # noqa: E501
+        :type: float
+        """
+        if quote_id is None:
+            raise ValueError("Invalid value for `quote_id`, must not be `None`")  # noqa: E501
+
+        self._quote_id = quote_id
+
+    @property
+    def order_hash(self):
+        """Gets the order_hash of this MarketQuoteFill.  # noqa: E501
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :return: The order_hash of this MarketQuoteFill.  # noqa: E501
+        :rtype: str
+        """
+        return self._order_hash
+
+    @order_hash.setter
+    def order_hash(self, order_hash):
+        """Sets the order_hash of this MarketQuoteFill.
+
+        Computed hash verifying the authenticity of the order  # noqa: E501
+
+        :param order_hash: The order_hash of this MarketQuoteFill.  # noqa: E501
+        :type: str
+        """
+        if order_hash is None:
+            raise ValueError("Invalid value for `order_hash`, must not be `None`")  # noqa: E501
+
+        self._order_hash = order_hash
+
+    @property
+    def taker_amount(self):
+        """Gets the taker_amount of this MarketQuoteFill.  # noqa: E501
+
+        Taker amount in base units to fill from this order  # noqa: E501
+
+        :return: The taker_amount of this MarketQuoteFill.  # noqa: E501
+        :rtype: str
+        """
+        return self._taker_amount
+
+    @taker_amount.setter
+    def taker_amount(self, taker_amount):
+        """Sets the taker_amount of this MarketQuoteFill.
+
+        Taker amount in base units to fill from this order  # noqa: E501
+
+        :param taker_amount: The taker_amount of this MarketQuoteFill.  # noqa: E501
+        :type: str
+        """
+        if taker_amount is None:
+            raise ValueError("Invalid value for `taker_amount`, must not be `None`")  # noqa: E501
+
+        self._taker_amount = taker_amount
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, MarketQuoteFill):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
